--- a/package.json
+++ b/package.json
@@ -4,8 +4,24 @@
     "description": "Starter template for html scss projects.",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "build": "webpack --mode production",
+        "start": "webpack serve --mode development"
     },
-    "author": "muazr.dev",
-    "license": "ISC"
+    "author": "Muaz Rehan <muazr.dev@gmail.com>",
+    "license": "ISC",
+    "devDependencies": {
+        "autoprefixer": "^10.3.4",
+        "css-loader": "^6.3.0",
+        "esbuild-loader": "^2.15.1",
+        "glob-all": "^3.2.1",
+        "mini-css-extract-plugin": "^2.3.0",
+        "postcss-loader": "^6.1.1",
+        "purgecss-webpack-plugin": "^4.0.3",
+        "sass": "^1.45.1",
+        "sass-loader": "^12.1.0",
+        "webpack": "^5.68.0",
+        "webpack-cli": "^4.8.0",
+        "webpack-dev-server": "^4.2.1"
+    }
 }
