--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "build": "webpack --mode production",
-        "start": "webpack serve --mode development"
+        "watch": "webpack serve --mode development"
     },
     "author": "Muaz Rehan <muazr.dev@gmail.com>",
     "license": "ISC",
